fix indicative color in dark mode

--- a/src/sass/app_2/modules/portfolio.scss
+++ b/src/sass/app_2/modules/portfolio.scss
@@ -132,8 +132,6 @@
                 }
             }
             &--price-stable {
-                color: $COLOR_BLACK;
-
                 &:before {
                     background-image: url('../images/app_2/portfolio/ic_price_stable.svg');
                 }
